# libvef

./: README.md
vef/: 25d.cpp  25d.hpp  25d.po.hpp  CMakeLists.txt  reader.cpp  reader.hpp  tilecutter.cpp  tilecutter.hpp  tiling-po.cpp  tiling-po.hpp  tiling.cpp  tiling.hpp  utils.cpp  utils.hpp  vef.cpp  vef.hpp
vef/tools/: CMakeLists.txt  ogrpoly.cpp  ogrpoly.hpp  vef2vef.cpp  vefinfo.cpp  vefupdate.cpp
